Finish chức năng update Avatar (ảnh bìa vẫn chưa)
finish chứ năng upload mới ảnh đại diện và nếu chưa có ảnh đại diện thì
sẽ có ảnh tạm thời thay thế ở trang update-info.

--- a/module/Userpage/view/userpage/userpage/index.phtml
+++ b/module/Userpage/view/userpage/userpage/index.phtml
@@ -146,7 +146,7 @@
 
     <div class="divUserPanel">
         <div class="userAvatar">
-            <img src="<?php echo $this->basePath(); ?>/img/faker.png" id="userAvatar" />
+            <img src="<?php echo $this->basePath(); ?>/img/ava-temp.png" id="userAvatar" />
         </div>
         <div class="userInfo">
             <div class="info name"><?php echo $datauser->getLastname() .' '. $datauser->getFirstname(); ?></div>
@@ -263,7 +263,7 @@
     <div class="divAction">
         <div class="divStatus">
             <div class="statusAvatar">
-                <img src="<?php echo $this->basePath(); ?>/img/faker.png" />
+                <img src="<?php echo $this->basePath(); ?>/img/ava-temp.png" />
             </div>
             <div class="statusRightPanel">
                 <div class="statusPosition"><span>Nguyễn Xuân Bình</span> &curren; 5 minutes ago at Ho Chi Minh</div>
@@ -301,7 +301,7 @@
                     </div>
                     <div class="commentCompose">
                         <div class="commentUserAvatar">
-                            <img src="<?php echo $this->basePath(); ?>/img/faker.png" />
+                            <img src="<?php echo $this->basePath(); ?>/img/ava-temp.png" />
                         </div>
                         <div class="commentRight">
                             <textarea></textarea>
